--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
         run: npm ci
         
       - name: Build
+        env:
+          VITE_AWS_API_URL: ${{ secrets.VITE_AWS_API_URL }}
         run: npm run build
       
       - name: Setup Pages
