--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "deploy": "npm run build && git add dist && git commit -m 'Deploy to GitHub Pages' && git push origin main"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.940.0",
+    "@aws-sdk/client-ses": "^3.940.0",
+    "@aws-sdk/lib-dynamodb": "^3.940.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.6"
